--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <textarea name="mensagem" id="mensagem" placeholder="Digite sua mensagem" required></textarea>
                 
-            <button type="submit">Enviar</button>
+            <button type="submit">Enviar</button>/**/
         </form>
    </div>
 
